--- a/public/squarespace/block-02-hero-booking.html
+++ b/public/squarespace/block-02-hero-booking.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <aside class="card-surface rounded-[28px] p-6 space-y-6">
+    <aside class="card-surface rounded-[28px] p-6 space-y-6 lg:sticky lg:top-8">
       <div class="space-y-3">
         <h2 class="text-lg font-semibold text-ink">
           Select dates and guests to see price per night
