add listing config

--- a/public/squarespace/block-07-scripts.html
+++ b/public/squarespace/block-07-scripts.html
@@ -1,8 +1,6 @@
 <!-- Block 07: JavaScript initialisation -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-o8UQ6LAJgq1jKK3QxDt6JrP3tAP+XBrp3vtY8CMu0vM=" crossorigin=""></script>
-<script>
-  window.LISTING_ID = window.LISTING_ID || "97521";
-</script>
+<script src="../listing-config.js"></script>
 <!-- Update the paths below to absolute URLs when embedding these blocks on Squarespace -->
 <script src="../listing-details.js"></script>
 <script src="../hero-photos.js"></script>
