--- a/public/index.html
+++ b/public/index.html
@@ -324,9 +324,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-o8UQ6LAJgq1jKK3QxDt6JrP3tAP+XBrp3vtY8CMu0vM=" crossorigin=""></script>
-    <script>
-      window.LISTING_ID = window.LISTING_ID || "97521";
-    </script>
+    <script src="./listing-config.js"></script>
     <script src="./listing-details.js"></script>
     <script src="./hero-photos.js"></script>
     <script src="./amenities-widget.js"></script>
