--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -93,7 +93,7 @@
             <div class="space-y-6">
               <div class="card-surface rounded-[28px] p-6 relative">
                 <div id="rating-badge" class="absolute top-6 right-6 inline-flex items-center gap-2 rounded-full bg-white/90 px-4 py-2 text-sm font-semibold text-ink shadow-card">
-                  <span class="flex h-6 w-6 items-center justify-center rounded-full bg-accent text-white text-xs font-semibold">★</span>
+                  <span class="flex h-6 w-6 items-center justify-center rounded-full bg-accent text-white text-xs font-semibold">â˜…</span>
                   <span>4.95</span>
                 </div>
                 <div class="grid gap-3 lg:grid-cols-[minmax(0,1.6fr)_minmax(0,1fr)]">
@@ -116,7 +116,7 @@
                     <span>House</span>
                   </div>
                   <div class="flex items-center gap-2 text-ink font-medium">
-                    <span class="inline-flex h-7 w-7 items-center justify-center rounded-full bg-brand/15 text-brand">★</span>
+                    <span class="inline-flex h-7 w-7 items-center justify-center rounded-full bg-brand/15 text-brand">â˜…</span>
                     <span id="listing-rating" class="flex items-center gap-1">
                       <span>4.95</span>
                       <span class="text-muted text-sm">42 reviews</span>
@@ -127,7 +127,7 @@
                   Lakeside Retreat w/ Kayaks, Fire Pit & Outside Dinning
                 </h1>
                 <p id="listing-meta" class="text-muted">
-                  6 guests • 3 bedrooms • 1 bathroom
+                  6 guests â€¢ 3 bedrooms â€¢ 1 bathroom
                 </p>
                 <p id="listing-description" class="text-sm sm:text-base leading-relaxed text-[#5b564c]">
                   Escape to 2.5 private acres on Lake Granbury where mornings begin with coffee on a porch swing and days end with s'mores by the fire pit. Kayak at sunrise, fish off the bank, or simply relax under a pergola while the breeze rolls through. This lakefront home offers everything you need to unplug and reconnect.
@@ -152,7 +152,7 @@
               </div>
               <div class="space-y-4">
                 <button
-                  id="open-calendar"
+                  data-open-calendar
                   class="w-full rounded-full border border-brand/40 bg-white px-5 py-3 text-sm font-semibold text-ink hover:bg-brand/10 transition"
                 >
                   Select Dates
@@ -169,7 +169,7 @@
                       id="guests-dec"
                       class="h-9 w-9 rounded-full border border-brand/30 text-brand hover:bg-brand/10 transition"
                     >
-                      −
+                      âˆ’
                     </button>
                     <button
                       id="guests-inc"
@@ -215,31 +215,18 @@
             <div id="amenities-container" class="grid gap-y-3"></div>
           </div>
 
-          <div id="availability" class="card-surface rounded-[28px] p-6 sm:p-8 space-y-6">
-            <div class="flex flex-wrap items-center justify-between gap-4">
-              <div>
-                <h2 class="text-xl font-semibold text-ink">Available days</h2>
-                <p class="text-sm text-muted">Select check-in and check-out dates</p>
-              </div>
-              <div class="flex items-center gap-2">
-                <button
-                  id="prev-month"
-                  class="h-10 w-10 rounded-full border border-brand/30 text-brand hover:bg-brand/10 transition"
-                >
-                  ‹
-                </button>
-                <button
-                  id="next-month"
-                  class="h-10 w-10 rounded-full border border-brand/30 text-brand hover:bg-brand/10 transition"
-                >
-                  ›
-                </button>
-              </div>
-            </div>
+                    <div class="card-surface rounded-[28px] p-6 sm:p-8 space-y-4">
             <div>
-              <p id="calendar-title" class="text-base font-semibold text-ink mb-4"></p>
-              <div id="calendar-container" class="w-full overflow-x-auto pb-2"></div>
+              <h2 class="text-xl font-semibold text-ink">Availability</h2>
+              <p class="text-sm text-muted">Open the calendar to see current availability.</p>
             </div>
+            <button
+              type="button"
+              data-open-calendar
+              class="inline-flex items-center gap-2 self-start rounded-full bg-brand px-5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:bg-brand/90"
+            >
+              Select Dates
+            </button>
           </div>
 
           <div class="card-surface rounded-[28px] p-6 sm:p-8 space-y-6">
@@ -310,17 +297,59 @@
             </div>
             <div class="flex flex-wrap gap-4 text-sm">
               <span class="flex items-center gap-2">
-                <span>☎</span>
+                <span>â˜Ž</span>
                 <a href="tel:+15126069809" class="hover:text-ink transition">+1 512 606 9809</a>
               </span>
               <span class="flex items-center gap-2">
-                <span>✉</span>
+                <span>âœ‰</span>
                 <a href="mailto:info@stayatlivingwaters.com" class="hover:text-ink transition">info@stayatlivingwaters.com</a>
               </span>
             </div>
           </div>
         </div>
       </footer>
+    </div>
+
+    <div
+      id="calendar-modal"
+      class="fixed inset-0 z-50 hidden items-center justify-center bg-black/40 p-4"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="calendar-modal-title"
+    >
+      <div class="relative w-full max-w-4xl rounded-[28px] bg-white p-6 sm:p-8 shadow-card">
+        <button
+          type="button"
+          class="absolute right-5 top-5 text-muted transition hover:text-ink"
+          aria-label="Close calendar"
+          data-close-calendar-modal
+        >&times;</button>
+        <div id="availability" class="space-y-6">
+          <div class="flex flex-wrap items-center justify-between gap-4">
+            <div>
+              <h3 id="calendar-modal-title" class="text-xl font-semibold text-ink">Select your stay dates</h3>
+              <p class="text-sm text-muted">Choose check-in and check-out dates to see availability.</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <button
+                id="prev-month"
+                class="h-10 w-10 rounded-full border border-brand/30 text-brand hover:bg-brand/10 transition"
+                type="button"
+              >&lsaquo;</button>
+              <button
+                id="next-month"
+                class="h-10 w-10 rounded-full border border-brand/30 text-brand hover:bg-brand/10 transition"
+                type="button"
+              >&rsaquo;</button>
+            </div>
+          </div>
+          <div>
+            <p id="calendar-title" class="text-base font-semibold text-ink mb-4"></p>
+            <div id="calendar-container" class="w-full overflow-x-auto pb-2"></div>
+          </div>
+          <p class="text-xs text-muted">Tip: select a start date to see eligible departure days.</p>
+        </div>
+      </div>
     </div>
 
     <div
@@ -421,3 +450,4 @@
     <script src="./reviews-widget.js"></script>
   </body>
 </html>
+
